data/derived/sp14/progs/unify/prog0931.ml.out
Characters 455-456:
  | Tan t -> (mod_float (tan(pi *. eval(t,x,y))) 1)
                                                 ^
Error: This expression has type int but an expression was expected of type
         float
